--- a/HotelListing.API/Properties/launchSettings.json
+++ b/HotelListing.API/Properties/launchSettings.json
@@ -12,7 +12,7 @@
     "HotelListing.API": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "swagger",
       "applicationUrl": "https://localhost:7269;http://localhost:5269",
       "environmentVariables": {
