bearer configurations added

--- a/HotelListing.API/appsettings.json
+++ b/HotelListing.API/appsettings.json
@@ -2,6 +2,12 @@
   "ConnectionStrings": {
     "HotelListingDbConnectionString": "Data Source=DESKTOP-I78CKSO;Initial Catalog=HotelList;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   },
+  "JwtSettings": {
+    "Issuer": "HotelListingAPI",
+    "Audience": "HotelListingAPIClient",
+    "DurationInMinutes": 10,
+    "Key": "DASDasxasdlaSDAELDALsdas"
+  },
   "SeriLog": {
     "MinimumLevel": {
       "Default": "Information",
